--- a/frontend-cemos/src/app/modules/app4-historia/app4-historia-bibliografia/app4-historia-bibliografia.html
+++ b/frontend-cemos/src/app/modules/app4-historia/app4-historia-bibliografia/app4-historia-bibliografia.html
@@ -7,9 +7,10 @@
   [capas]="capas"
   [markdownPath]="markdownPath"
   [basePath]="basePath"
-  [conceitosPath]="conceitosPath"
   [flashcardsPath]="flashcardsPath"
   [perguntasPath]="perguntasPath"
   [simuladosPath]="simuladosPath"
-  [checkAbandonoPath]="checkAbandonoPath">  
+  [pdfSlidesFolders]="pdfSlidesFolders">  
 </app-capa-bibliografia>
+
+<!-- [checkAbandonoPath]="checkAbandonoPath" -->
