--- a/frontend-cemos/src/app/modules/app4-historia/app4-historia-bibliografia/breve-historia/breve-historia.html
+++ b/frontend-cemos/src/app/modules/app4-historia/app4-historia-bibliografia/breve-historia/breve-historia.html
@@ -3,7 +3,8 @@
     [contentPath]="contentPath"
     [fileNames]="fileNames"
     [backRoute]="backRoute"
-    [backLabel]="backLabel">
+    [backLabel]="backLabel"
+    [pdfSlidesFolders]="pdfSlidesFolders">
   </app-livro-individual>
 </div>
   
